# faas-content-proxy

./: Cargo.toml  Dockerfile  README.md  knative.toml  pod.yaml  runpod.sh
public/: 404.html  500.html  index.html
sampledata/: 1.json  2.json  3.json
src/: main.rs
