[package]
name = "faas-content-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tide = "0.17.0-beta.1"
async-std = { version = "1.6.5", features = ["unstable", "attributes"] }
serde = "1.0.130"
surf = "2.3.2"
serde_json = "1.0.72"
dotenv = "0.15.0"
toml = "0.5.8"
route-recognizer = "0.3.1"
once_cell = "1.8.0"
